--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello</h1>
+    <div id="root">
+
+    </div>
+    <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <script src="./App.js"></script>
 </body>
 </html>
